// Copyright 2019 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package yasl.link.pb;

option cc_generic_services = true;

service ReceiverService {
  // push the data to receiver's local database.
  rpc Push(PushRequest) returns (PushResponse);
}

enum TransType {
  MONO = 0;
  CHUNKED = 1;
}

enum ErrorCode {
  SUCCESS = 0;
  UNEXPECTED_ERROR = 1;
  INVALID_REQUEST = 2;
  INVALID_RESOURCE = 3;
  NETWORK_ERROR = 4;
}

message ChunkInfo {
  uint64 message_length = 1;
  uint64 chunk_offset = 2;
}

message PushRequest {
  uint64 sender_rank = 1;
  // key of the message.
  string key = 2;
  // value of the message.
  bytes value = 3;
  // chunk related.
  TransType trans_type = 4;
  ChunkInfo chunk_info = 5;
}

message PushResponse {
  ErrorCode error_code = 1;
  string error_msg = 2;
}
